Finalizing deployment